plugins {
    id 'java'
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = 'UTF-8'
    if (JavaVersion.current().isJava9Compatible()) {
        it.options.release.set(8)
    }
}

sourceSets.main.java.srcDirs += 'build/generated/sources/annotationProcessor/java/main'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories { 
    mavenCentral()
    maven {
        name = "Quilt"
        url = "https://maven.quiltmc.org/repository/release"
    }
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.github.QuiltMC:asmr-processor-prototype:fbaea89'

    compileOnly project(':annotation')
    annotationProcessor project(':annotation')

    testImplementation project(':example')
    testImplementation 'org.ow2.asm:asm:9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

test {
    useJUnitPlatform()
}
